PAE-24: Fixed radio btns styling problem on IE 10

--- a/src/Modules/Settings/Dnn.PersonaBar.SiteSettings/SiteSettings.Web/src/components/siteAliasSettings/style.less
+++ b/src/Modules/Settings/Dnn.PersonaBar.SiteSettings/SiteSettings.Web/src/components/siteAliasSettings/style.less
@@ -14,12 +14,8 @@
             .dnn-radio-buttons {
                 margin-top: 3px;
                 width: auto;
-                input {
-                    position: relative;
-                    margin-top: -10px;
-                }
                 label {
-                    float: left;
+                    margin-right: 15px;
                 }
             }
             .dnn-switch-container {
